--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <title> BETIS 2022 </title>
-        <link rel = "icon" type = image/png href = "logo ijo 1.png" sizes = 16x16>
+        <link rel = "icon" type = image/png href = "logo hijau tua.png" sizes = 16x16>
         <link href = "https://fonts.googleapis.com/icon?family=Material+Icons" rel = "stylesheet">
         <meta charset="UTF-8" />
     </head>
@@ -11,7 +11,7 @@
         <header class = "header-section">
             <div class="call-to-action">
                 <picture>
-                    <source media="(min-width: 1000px)" srcset = "large.svg">
+                    <source media="(min-width: 981px)" srcset = "large.svg">
                     <source media="(min-width: 0px)" srcset = "medium.svg">
                     <img src="large.svg" alt="IfItDoesntMatchAnyMedia">
                 </picture>
@@ -24,11 +24,8 @@
         <div class="container">
             <div class="bar">
                 <div class="bar__content u-centered">
-                    <img class = bar__logo src= "./logo ijo 1.png" alt="logo-betis-2022">
-                    <input type = "checkbox" id = "inpNavToggle">
-                    <label class = "bar__nav-toggle" for="inpNavToggle">
-                        <i class="material-icons">menu</i>
-                    </label>
+                    <img class = bar__logo src= "./logo hijau tua.png" alt="logo-betis-2022">
+                    <i class="material-icons" onclick = "hasbeenclick()" id = "inpNavToggle"> menu</i>
                     <nav class = "nav">
                         <a class = "nav__link" href="#"> HOME </a>
                         <a class = "nav__link" href="#"> About </a>
@@ -76,9 +73,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class = "white-space">
-                        <a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et culpa odit minus itaque incidunt blanditiis deleniti omnis quas assumenda, tenetur, perferendis adipisci? Optio, laborum nulla reprehenderit velit ducimus necessitatibus placeat. </a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -100,22 +94,22 @@
                         <img class = "gmail" src="envelope.png" alt="email">
                         <div class="keterangan-email">
                             <h4> EMAIL US AT </h4>
-                            <p> betisfasilkom@gmail.com </p>
+                            <a> betisfasilkom@gmail.com </a>
                         </div>
                     </div>
                     <div class="location">
                         <img class = "gps" src="Group 98.png" alt="location">
                         <div class="keterangan-location">
                             <h4> OUR LOCATION </h4>
-                            <p> Fakultas Ilmu Komputer Universitas Indonesia Kampus UI Depok, Pondok Cina, Kec. Beji, Kota Depok, Jawa Barat 16424 </p>
+                            <a> Fakultas Ilmu Komputer Universitas Indonesia Kampus UI Depok, Pondok Cina, Kec. Beji, Kota Depok, Jawa Barat 16424 </a>
                         </div>
                     </div>
                 </div>
                 <div class="decoration">
-                    <img src="Group 261.png" alt="daun">
-                    <img src="Group 354.png" alt="daun">
+                    <img src="Group 329 (2).png" alt="daun">
+                    <img src="Group 330 (2).png" alt="daun">
                 </div>
         </footer>
     </body>
-    <script src="app.js"> </script>
+    <script src="main.js"> </script>
 </html>
